 * misceleanous changes and bug fixes
   * an friendly healer hill now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play it's own death
   * turn bell can sound if other soundFX are turned off
   * the first turn starts again with the proper time of day (bug 8637)
   * removes the scaling handling in the halo, removing quite some code
   * fixed various problems found by valgrind

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland
     * The Crossing, fixed a bug which prevented the undead leader spawned
        at turn 8 to have a keep
     * The Duel the keep is replaced by a castle tile instead of grass
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
     * In Elven Council the leaders are no longer standing in a keep
       but in a normal castle tile
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
   * Two Brothers
     * updated the portrait of Bjarn to match the new mage colors
     * removed Skeletons as enemies in the first mission on easy, and
       Skeleton Archer as enemy on hard
     * added Ghouls as enemies for all undeads
     * some map updates to make them easier (2nd mission) or look better (all
       the other missions)
 * editor
   * allow maps to be loaded from scenario files and written back to them
   * upon entering a new starting position the underlaying terrain
     remains unchanged
   * when overwriting a starting position and undo that action
      only the terrain was undone, not the starting position that's fixed
   * flipping a map over the Y axis no longer resizes the map